promo z-index bug fixed

--- a/source/app/scss/modules/_promo.scss
+++ b/source/app/scss/modules/_promo.scss
@@ -62,6 +62,7 @@
     &__img {
       max-width: 100%;
       border-radius: 0;
+      z-index: -1;
     }
     &__title,
     &__text {
